Rutas relativas header-footer arregladas

--- a/Sites/templates/footer.html
+++ b/Sites/templates/footer.html
@@ -67,7 +67,7 @@
  </footer>
 
  <!-- Scripts -->
- <script src="js/jquery.js"></script>
- <script src="js/functions.js"></script>
+ <script src="../js/jquery.js"></script>
+ <script src="../js/functions.js"></script>
 </body>
 </html>
