--- a/Sites/templates/header.html
+++ b/Sites/templates/header.html
@@ -7,7 +7,7 @@
       <meta name="author" content="Design Hooks" />
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700" rel="stylesheet" />
-      <link href="css/screen.css" rel="stylesheet" />
+      <link href="../css/screen.css" rel="stylesheet" />
    </head>
    <body class="home" id="page">
       <!-- Header -->
@@ -15,7 +15,7 @@
          <div class="container">
             <div class="header-content">
                <a href="index.php">
-                  <img src="img/site-identity.png" alt="site identity" />
+                  <img src="../img/site-identity.png" alt="site identity" />
                </a>
 
                <nav class="site-nav">
