--- a/Sites/templates/header.html
+++ b/Sites/templates/header.html
@@ -14,7 +14,7 @@
       <header class="main-header">
          <div class="container">
             <div class="header-content">
-               <a href="index.php">
+               <a href="../index.php">
                   <img src="../img/site-identity.png" alt="site identity" />
                </a>
 
