--- a/Sites/css/screen.css
+++ b/Sites/css/screen.css
@@ -2503,8 +2503,9 @@ textarea:focus {
 }
 .subscribe-form input[type="text"] {
   display: block;
-  width: 100%;
+  width: 80%;
   height: 40px;
+  border: 2px solid #717171;
   border-radius: 5px;
   padding: 0 155px 0 20px;
   font-size: 14px;
