--- a/Sites/css/screen.css
+++ b/Sites/css/screen.css
@@ -2511,6 +2511,16 @@ textarea:focus {
   font-size: 14px;
   color: #2c3e50;
 }
+.subscribe-form input[type="password"] {
+  display: block;
+  width: 80%;
+  height: 40px;
+  border: 2px solid #717171;
+  border-radius: 5px;
+  padding: 0 155px 0 20px;
+  font-size: 14px;
+  color: #2c3e50;
+}
 .subscribe-form input[type="text"]::-webkit-input-placeholder {
   color: #717171;
 }
