--- a/Sites/css/screen.css
+++ b/Sites/css/screen.css
@@ -2530,7 +2530,7 @@ textarea:focus {
 .subscribe-form input[type="text"].placeholder {
   color: #717171;
 }
-.subscribe-form .btn {
+.subscribe-form .side-btn {
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
   position: absolute;
