--- a/Sites/templates/header.html
+++ b/Sites/templates/header.html
@@ -15,7 +15,7 @@
          <div class="container">
             <div class="header-content">
                <a href="../index.php">
-                  <img src="../img/site-identity.png" alt="site identity" />
+                  <img src="../img/site-identity.png" alt="site identity" id="logo" />
                </a>
 
                <nav class="site-nav">
