--- a/Sites/templates/session_footer.html
+++ b/Sites/templates/session_footer.html
@@ -1,70 +1,46 @@
 <footer class="main-footer">
-    <div class="container">
-       <div class="row">
-          <div class="col-md-5">
-             <div class="widget widget_links">
-                <h5 class="widget-title">Top Locations</h5>
-                <ul>
-                   <li><a href="#">Lorem impsum dolor</a></li>
-                   <li><a href="#">Sit amet consectetur</a></li>
-                   <li><a href="#">Adipisicing elit</a></li>
-                   <li><a href="#">Eiusmod tempor</a></li>
-                   <li><a href="#">incididunt ut labore</a></li>
-                </ul>
-             </div>
-          </div>
+      <div class="container">
+         <div class="row">
 
-          <div class="col-md-5">
-             <div class="widget widget_links">
-                <h5 class="widget-title">Featured Boats</h5>
-                <ul>
-                   <li><a href="#">Lorem impsum dolor</a></li>
-                   <li><a href="#">Sit amet consectetur</a></li>
-                   <li><a href="#">Adipisicing elit</a></li>
-                   <li><a href="#">Eiusmod tempor</a></li>
-                </ul>
-             </div>
-          </div>
+            <div class="col-md-5">
+               <div class="widget widget_links">
+                  <h5 class="widget-title">Servicios</h5>
+                  <ul>
+                     <li><a href="#">Artistas</a></li>
+                     <li><a href="#">Obras</a></li>
+                     <li><a href="#">Lugares de interes</a></li>
+                  </ul>
+               </div>
+            </div>
 
-          <div class="col-md-9">
-             <div class="widget widget_social">
-                <h5 class="widget-title">Subscribe to our newsletter</h5>
-                <form class="subscribe-form">
-                   <div class="input-line">
-                      <input type="text" name="subscribe-email" value="" placeholder="Your email address" />
-                   </div>
-                   <button type="button" name="subscribe-submit" class="btn btn-special no-icon">Subscribe</button>
-                </form>
+            <div class="col-md-5">
+               <div class="widget widget_links">
+                  <h5 class="widget-title">Comprar</h5>
+                  <ul>
+                     <li><a href="#">Ticket</a></li>
+                     <li><a href="#">Reserva</a></li>
+                     <li><a href="#">Entrada</a></li>
+                  </ul>
+               </div>
+            </div>
 
-                <ul class="clean-list social-block">
-                   <li>
-                      <a href="#"><i class="icon-facebook"></i></a>
-                   </li>
-                   <li>
-                      <a href="#"><i class="icon-twitter"></i></a>
-                   </li>
-                   <li>
-                      <a href="#"><i class="icon-google-plus"></i></a>
-                   </li>
-                </ul>
-             </div>
-          </div>
+            
+            <div class="col-md-5">
+               <div class="widget widget_links">
+                  <h5 class="widget-title">Autores</h5>
+                  <ul>
+                     <li><a href="https://www.instagram.com/diegoemilio01/?hl=es-la" target="_blank">Diego Bustamante</a></li>
+                     <li><a href="https://www.instagram.com/luckbox314/?hl=es-la" target="_blank">Lucas Muñoz</a></li>
+                     <li><a href="https://www.instagram.com/eli_sabja/?hl=es-la" target="_blank">Elias Sabja</a></li>
+                     <li><a href="#">Cristobal</a></li>
 
-          <div class="col-md-5">
-             <div class="widget widget_links">
-                <h5 class="widget-title">Contact us</h5>
-                <ul>
-                   <li><a href="#">Lorem impsum dolor</a></li>
-                   <li><a href="#">Sit amet consectetur</a></li>
-                   <li><a href="#">Adipisicing elit</a></li>
-                   <li><a href="#">Eiusmod tempor</a></li>
-                   <li><a href="#">incididunt ut labore</a></li>
-                </ul>
-             </div>
-          </div>
-       </div>
-    </div>
- </footer>
+                  </ul>
+               </div>
+            </div>
+            
+         </div>
+      </div>
+   </footer>
 
  <!-- Scripts -->
  <script src="../../js/jquery.js"></script>
