--- a/Sites/css/screen.css
+++ b/Sites/css/screen.css
@@ -3228,6 +3228,7 @@ textarea:focus {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  text-align: center;
 }
 
 .custom td,
