--- a/Sites/css/screen.css
+++ b/Sites/css/screen.css
@@ -2764,6 +2764,9 @@ textarea:focus {
   color: #717171;
   margin: 0;
 }
+.section-title .h1 {
+  margin-top: 100px;
+}
 @media (max-width: 768px) {
   .section-title {
     margin-bottom: 45px;
@@ -3228,10 +3231,12 @@ textarea:focus {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  text-align:center;
 }
 
 .custom td,
 .custom th {
+  text-align:center;
   border: 1px solid #ddd;
   padding: 8px;
 }
