--- a/Sites/css/screen.css
+++ b/Sites/css/screen.css
@@ -2764,7 +2764,7 @@ textarea:focus {
   color: #717171;
   margin: 0;
 }
-.section-title .h1 {
+.section-title h1 {
   margin-top: 100px;
 }
 @media (max-width: 768px) {
