--- a/Sites/templates/footer.html
+++ b/Sites/templates/footer.html
@@ -42,8 +42,9 @@
       </div>
    </footer>
 
- <!-- Scripts -->
- <script src="../js/jquery.js"></script>
- <script src="../js/functions.js"></script>
+   <!-- Scripts -->
+   <script src="../js/calendar.js"></script>
+   <script src="../js/jquery.js"></script>
+   <script src="../js/functions.js"></script>
 </body>
 </html>
