--- a/Sites/templates/footer.html
+++ b/Sites/templates/footer.html
@@ -6,21 +6,21 @@
                <div class="widget widget_links">
                   <h5 class="widget-title">Servicios</h5>
                   <ul>
-                     <li><a href="#">Artistas</a></li>
-                     <li><a href="#">Obras</a></li>
-                     <li><a href="#">Lugares de interes</a></li>
+                     <li><a href="vista_artistas.php">Artistas</a></li>
+                     <li><a href="vista_obras.php">Obras</a></li>
+                     <li><a href="vista_lugares.php">Lugares de interes</a></li>
                   </ul>
                </div>
             </div>
 
             <div class="col-md-5">
                <div class="widget widget_links">
-                  <h5 class="widget-title">Comprar</h5>
-                  <ul>
-                     <li><a href="#">Ticket</a></li>
-                     <li><a href="#">Reserva</a></li>
-                     <li><a href="#">Entrada</a></li>
-                  </ul>
+                  <h5 class="widget-title">Viajes y estadía</h5>
+                     <ul>
+                        <li><a href="vista_comprar_ticket.php">Comprar ticket de viaje</a></li>
+                        <li><a href="vista_hacer_reserva.php">Hacer reserva de hotel</a></li>
+                        <li><a href="vista_itinerario.php">Crear itinerario</a></li>
+                     </ul>
                </div>
             </div>
 
