--- a/Sites/templates/header.html
+++ b/Sites/templates/header.html
@@ -8,6 +8,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700" rel="stylesheet" />
       <link href="../css/screen.css" rel="stylesheet" />
+      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+      integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+      crossorigin=""/>
    </head>
    <body class="home" id="page">
       <!-- Header -->
