--- a/Sites/templates/footer_mapa.html
+++ b/Sites/templates/footer_mapa.html
@@ -59,6 +59,10 @@ crossorigin=""></script>
     tileSize: 512,
     zoomOffset: -1,
     accessToken: 'pk.eyJ1IjoiZWxpYXMyMTA1c2IiLCJhIjoiY2tjaWhteHVqMHFidzJxbzBwMmE0MGUwbCJ9.9K8F9xdOATN10tNQjADDTQ'}).addTo(mymap);
-    var marker = L.marker([51.5, -0.09]).addTo(mymap);
+
+    <?php foreach($markers as $marker){
+        echo
+        'L.marker([51.5, -0.09]).addTo(mymap);';
+    } ?>
 </script>
 </html>
